# python-release-from-pr

./: README.md  auto_commit.sh  publish_to_pypi.sh  requirements-dev.in  requirements.in  requirements.txt
.github/ISSUE_TEMPLATE/: issue.yaml
.github/codeql/: codeql-config.yml
.github/workflows/: codeql-python.yml  conventional-commits.yml  python-release-pr.yml  release-please.yml  style-python.yml  test-action.yml
.github/workflows/ISSUE_TEMPLATE/: issue.yaml
my_helper_package/: requirements-publish.txt  setup.cfg
my_helper_package/src/ilsadvbisnvavojebaij/my_math/: scalars.py
notebooks/: example_notebook.ipynb
scripts/: example_script.py  fix_python_style.sh
