[bdist_wheel]
universal = 1

[metadata]
name = my_helper_package
version = attr: my_helper_package.__version__
description = A helper package to help me with my intern project
long_description = file: README.md
long_description_content_type = text/markdown
author = My Name
author_email = my-email@arize.com
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence

[options]
packages = find:
python_requires = >=3.10
install_requires =
    numpy~=1.24.0

[options.packages.find]
where = src
exclude = docs, tests*